# n-puzzle

./: .gitignore  Makefile  README.md  test.sh
.github/workflows/: rust_ci.yml
n-puzzle/: Cargo.toml
n-puzzle/src/: algorithm.rs  args.rs  lib.rs  main.rs  n_puzzle.rs
n-puzzle/src/algorithm/: astar.rs  closed_set.rs  greedy.rs  heuristic.rs  open_set.rs  output.rs  uniform_cost.rs
n-puzzle/src/algorithm/heuristic/: inversion_distance.rs
n-puzzle/src/n_puzzle/: generator.rs  parser.rs  pos.rs  solvable.rs
n-puzzle/tests/: test.rs
puzzles/: comment_puzzle.txt  difficult_3_puzzle.txt  difficult_puzzle_3.txt  difficult_puzzle_3_2  easy_10_puzzle.txt  easy_4_puzzle.txt  max_100_puzzle.txt  three.txt  unsolvable_puzzle.txt
srcs/: main.cpp
test/ksuzuki/: memo.md
test/yahokari/: Makefile  npuzzle-gen.py  test.sh
test/yahokari/includes/: Board.hpp
test/yahokari/n-puzzle/: Cargo.toml  index.html  style.scss
test/yahokari/n-puzzle/src/: algorithm.rs  args.rs  main.rs  n_puzzle.rs
test/yahokari/n-puzzle/src/algorithm/: closed_set.rs  greedy.rs  heuristic.rs  output.rs
test/yahokari/n-puzzle/src/n_puzzle/: generator.rs  pos.rs
test/yahokari/srcs/: Board.cpp
