[package]
name = "n-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-logger = "0.2.0"
log = "0.4.6"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }